fixed the spacing on the display name

--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -501,9 +501,6 @@
   .px-3 {
     padding-inline: calc(var(--spacing) * 3);
   }
-  .px-5 {
-    padding-inline: calc(var(--spacing) * 5);
-  }
   .px-10 {
     padding-inline: calc(var(--spacing) * 10);
   }
@@ -753,6 +750,7 @@
     letter-spacing: var(--tracking-tight);
     color: var(--color-secondary);
     text-transform: capitalize;
+    margin-inline: calc(var(--spacing) * 8);
     margin-top: calc(var(--spacing) * 4);
   }
   .db-link-item {
